CHANGES

2015-12-08
 * annotate_snps.py: fixed gene_id field, if count_alt == 0: site_type = 'FX'

2015-12-06
 * run_phylo_cnv.py species: allowed word lengths > 28

2015-12-02
 * species_prevalence.R: add option '-p' for plotting group proportions instead of sample counts

2015-11-23
 * added hidden option '-D DB' to run_phylo_cnv.py to allow user to specify alternate reference database

2015-11-19
 * added hidden option '--trim' to run_phylo_cnv.py genes and snvs to trim reads from 3'/right end

2015-11-17
 * added -i MAPID and -c ALN_COV to run_phylo_cnv.py species for tuning sensitivity

2015-11-14
 * major changes to species module:
   * added -d db_type to allow for search against ssuRNA database
   * modified data files: pid_cutoffs.txt, gene_length.txt for ssuRNA genes
   * changed name of marker genes database (hs-blastn to phyeco) and added ssuRNA database
   * added word size as an option
   * renamed temporary files : <out>.m8 and <out>.read_counts
   * added check that <out> is not a directory
   * scp'ed new marker-genes database to lighthouse

2015-11-13
 * fixed bug in snvs.py: line 50: bam_path was not defined
 * added more unit tests

2015-11-12
 * added /test/test_phylo_cnv.py for unit testing

2015-11-10
 * fixed bug with --keep_temp flag
 * run_phylo_cnv.py genes & snvs: checks if bamfile is corrupt
 * only need profile if building database: run_phylo_cnv.py

2015-11-08
 * made default alignment coverage 0.75 in run_phylo_cnv.py genes
 * merge_genes.py, merge_species.py, merge_snps.py:
   * replaced -i <indir> with -i <input> and -t <intype>

2015-11-07
 * more help text to run_phylo_cnv.py

2015-11-06
 * added more help text to merge_species.py, merge_genes.py, and merge_snps.py
 * parameters now printed to stdout for run_phylo_cnv.py and merging scripts
 * made removal of temp files default, replaces --remove with --keep_temp flag
 * changed several flag names including: