@@ -13,4 +13,4 @@ B000086	96.75
 B000096	96.75
 B000103	95.25
 B000114	94.5
-16S	97
+16S	98
